ddp-workspace/projects/ddp-rgp/src/styles.scss
/* ... */
.PageHeader-boxContent {
    color: black;
    padding: 40px 40px 0 40px;
    font-size: 1.3rem;
    line-height: 1.7rem;
    font-weight: 300;
}

@media only screen and (min-width: 2500px) {
    .PageHeader-box {
        width: 1200px;
        margin-left: -600px;
    }

    .PageHeader-boxContent {
        padding: 75px 75px 0 75px;
        font-size: 1.4rem;
        line-height: 1.8rem;
    }

    .PageHeader-box--footer {
        height: 75px;
    }
}

@media only screen and (min-width: 1400px) and (max-width: 2499px) {
    .PageHeader-box {
        width: 900px;
        margin-left: -450px;
    }
}

@media (min-width: 768px) and (max-width: 1024px) {
    .PageHeader-box--dataSharing {
        width: 50%;
    }

    .PageHeader-box .PageHeader-boxContent,
    .PageHeader-box--dataSharing .PageHeader-boxContent {
        padding: 25px 25px 0 25px;
    }

    .PageHeader-box--footer {
        height: 25px;
    }
}

@media only screen and (max-width: 767px) {
    .PageHeader-boxContent {
        padding: 25px 25px 0 25px;
        font-size: 1.1rem;
        line-height: 1.5rem;
    }
}

@media only screen and (max-width: 450px) {
    .PageHeader-background {
        padding: 50px 0 0 0;
        margin-top: 0;
    }

    .PageHeader-title,
    .activity-header {
        font-size: 2rem;
        padding: 20px 0 0 0;
    }

    .PageHeader-title--aboutUs {
        margin: 60px 0 30px 0 !important;
    }
}

.PageContent-image,
.PageContent-imageStep {
    width: 100%;
    height: auto;
}

.PageContent-image {
    border-bottom: 10px solid #0C457D;
}

.PageContent-imageStep {
    border-bottom: 7px solid #E8702A;
}

.Panel {
    padding-bottom: 10px;
    cursor: pointer;
    width: 100%;
    transition: all 0.3s ease-in-out;
}

.Panel:hover .Panel-title,
.Panel:hover .Panel-icon {
    color: #0EA7B5;
}

h3.Panel-title {
    font-size: 1.2rem;
    line-height: 1.6rem;
    font-weight: 300;
    color: black;
}

.Panel-icon {
    color: #aaaaaa;
    float: right;
    padding-right: 10px;
}

.Close-icon {
    float: right;
    margin: 10px 5px 0 0;
}

.Box {
    background-color: rgba(12, 69, 125, 0.1);
    border-radius: 2px;
    border: 1px solid #0C457D;
    color: #0C457D;
    font-weight: 300;
    padding: 25px;
}

.List-ol {
    padding-left: 20px;
    margin-top: 15px;
}

.List-li {
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.6rem;
}

.List-question {
    font-size: 1rem;
    font-weight: 700;
    padding: 20px 0 10px 0;
}

.List-line {
    border: none;
    border-top: 1px solid #e8e8e8;
    margin: 20px 0 0 0;
    width: 100%;
}

@media only screen and (min-width: 2500px) {
    .List-li {
        font-size: 1.2rem;
        line-height: 1.8rem;
    }

    .List-question {
        font-size: 1.2rem;
        padding: 35px 0 15px 0;
    }
}

/* Activity pages */
.main_activity .header-section {
    padding-top: 75px;
    padding-bottom: 1px;
}

.activity-buttons {
    padding-bottom: 20px;
}

.ddp-activity-question {
    padding-bottom: 10px;
}

.Question--text .ddp-activity-validation {
    margin-top: -15px;
}

.Question--picklist {
    padding-bottom: 5px;

    .mat-list-base .mat-list-item.mat-3-line {
        min-height: 88px;
        height: unset;
    }

    .mat-list-base .mat-list-item {
        min-height: 48px;
        height: unset;
    }

    .ddp-picklist-option-list-item .mat-form-field,
    .ddp-picklist-option-list-item .ddp-helper {
        float: left;
    }

    .ddp-helper {
        padding-bottom: 15px;
    }

    .mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-content {
        flex-direction: column;
        align-items: unset
    }
}

.ddp-activity-validation {
    .ErrorMessage {
        font-size: 0.9rem;
        color: #f44336;
        font-weight: 300;
        margin: 0 0 10px 0;
        padding: 0;
    }
}

.BlueBox {
    background-color: rgba(12,69,125,.1);
    border-radius: 2px;
    border: 1px solid #0c457d;
    color: #0c457d;
    font-weight: 300;
    padding: 25px;
}

.BlueHeading {
    margin-top: 20px;
    padding-top: 5px;
    color: #0c457d;
    font-size: 1.5rem;
    line-height: 2rem;
    font-weight: 600;

    .SubHeading {
        color: #333;
        font-size: 16px;
        font-style: italic;
        font-weight: 300;
    }
}


/* How it Works activity takes up only part of the page */
.Container--howItWorks {
    .button_primary {
        margin-top: 10px;
    }

    .mat-list-base .mat-list-item {
        min-height: 48px;
        height: unset;
    }
}
/******LANDING PAGES*/

.Landing-imageContainer {
    display: block;
    width: 100%;
    height: auto;
    position: relative;
    overflow: hidden;
}

.Landing-image {
    display: block;
    max-width: 100%;
    max-height: 100%;
    position: absolute;
    top: 0;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

@media only screen and (max-width: 767px) {
    .Landing-imageContainer {
        padding: 66.6% 0 0 0;
        /* sm 66.6% = 100 / (w / h) = 100 / (767 / 510) */
    }
}

@media (min-width: 768px) and (max-width: 1024px) {
    .Landing-imageContainer {
        padding: 66.6% 0 0 0;
        /*md 66.6% = 100 / (w / h) = 100 / (1024 / 682) */
    }
}

@media (min-width: 1025px) and (max-width: 1920px) {
    .Landing-imageContainer {
        padding: 57.4% 0 0 0;
        /*lg 57.4% = 100 / (w / h) = 100 / (1920 / 1100) */
    }
}

@media only screen and (min-width: 1921px) {
    .Landing-imageContainer {
        padding: 57.4% 0 0 0;
        /*xl 57.4% = 100 / (w / h) = 100 / (3000 / 1719) */
    }
}

.Landing-message {
    position: absolute;
    top: 0;
    max-width: 100%;
    display: inline-block;
    margin: 10vh 50px 0 0;
}

h1.Landing-title {
    text-align: center;
    font-size: 2.3rem;
    line-height: 3rem;
    font-weight: 300;
}

h2.Landing-title {
    text-align: center;
    font-size: 2.5rem;
    line-height: 3rem;
    font-weight: 300;
}
/* ... */

